# blocksmith

./: .env.example  .envrc  .gitignore  DEVELOPMENT.md  LICENSE  LITELLM_CORE_DESIGN.md  README.md  TODO.md  pyproject.toml  run_integration_tests.sh
.github/workflows/: tests.yml
blocksmith/: __init__.py  cli.py  client.py  convert.py
blocksmith/animator/: SYSTEM_PROMPT.md  prompts.py
blocksmith/converters/: __init__.py  convert.py  coordinate_utils.py  rotation_utils.py  uv_mapper.py
blocksmith/converters/bbmodel/: __init__.py  exporter.py  importer.py
blocksmith/converters/gltf/: README.md  __init__.py  exporter.py  format_utils.py  geometry_filter.py  importer.py  importer_wrapper.py  texture_utils.py
blocksmith/converters/python/: README.md  __init__.py  exporter.py  importer.py
blocksmith/generator/: SYSTEM_PROMPT.md  __init__.py  engine.py  prompts.py
blocksmith/llm/: __init__.py  client.py  exceptions.py
blocksmith/schema/: __init__.py  blockjson.py
blocksmith/texturing/: __init__.py  atlas_packer.py  clay_atlas.py  smart_uv_packer.py  uv_atlas.py
blocksmith/utils/: __init__.py
docs/: ENGINEERING_NOTES.md  FUTURE_WORK.md
docs/design/: texturing_pipeline.md
examples/: README.md  advanced.py  quickstart.py
tests/: __init__.py  test_blender_export.py  test_cli.py  test_client.py  test_convert.py  test_converters.py  test_roundtrips.py  test_texturing.py  test_uv_roundtrip.py
tests/integration/: README.md  __init__.py  test_generation.py
